--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -41,81 +41,257 @@
             android:background="@color/colorPrimary"
             tools:context=".registration.UserRegistrationActivity">
 
-
-            <TextView
-                android:id="@+id/tv_give_rent"
+            <GridLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="40dp"
-                android:layout_marginEnd="24dp"
-                android:layout_marginBottom="24dp"
-                android:background="@drawable/roundshape_white_bg"
-                android:padding="10dp"
-                android:text="@string/give_rent"
-                android:textAlignment="center"
-                android:textSize="24sp"
-                app:layout_constraintBottom_toTopOf="@+id/tv_take_rent"
+                android:layout_marginBottom="8dp"
+                android:alignmentMode="alignMargins"
+                android:columnCount="2"
+                android:columnOrderPreserved="false"
+                android:padding="20dp"
+                android:rowCount="2"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_home"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    android:layout_margin="12dp"
+                    app:cardCornerRadius="12dp"
+                    app:cardElevation="6dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:padding="16dp">
+
+                        <ImageView
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:src="@drawable/home_c"/>
 
 
-            <TextView
-                android:id="@+id/tv_take_rent"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:background="@drawable/roundshape_white_bg"
-                android:padding="10dp"
-                android:text="@string/take_rent"
-                android:textAlignment="center"
-                android:textSize="24sp"
-                app:layout_constraintEnd_toEndOf="@+id/tv_give_rent"
-                app:layout_constraintStart_toStartOf="@+id/tv_give_rent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_give_rent" />
+                        <TextView
+                            android:gravity="center"
+                            android:id="@+id/tv_give_rent"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="@string/give_rent"
+                            android:textAlignment="center"
+                            android:textStyle="bold"
+                            android:textColor="@android:color/black"
+                            android:textSize="18sp">
+
+                        </TextView>
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_mess"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    android:layout_margin="12dp"
+                    app:cardCornerRadius="12dp"
+                    app:cardElevation="6dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:padding="16dp">
+
+                        <ImageView
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:src="@drawable/home_c"/>
+
+                        <TextView
+                            android:gravity="center"
+                            android:id="@+id/tv_take_rent"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="@string/take_rent"
+                            android:textAlignment="center"
+                            android:textStyle="bold"
+                            android:textColor="@android:color/black"
+                            android:textSize="18sp">
+
+                        </TextView>
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_car"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    android:layout_margin="12dp"
+                    app:cardCornerRadius="12dp"
+                    app:cardElevation="6dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:padding="16dp">
+
+                        <ImageView
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:src="@drawable/home_c"/>
 
 
-            <TextView
-                android:id="@+id/tv_earning_site"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:background="@drawable/roundshape_white_bg"
-                android:padding="10dp"
-                android:text="@string/earning_site"
-                android:textAlignment="center"
-                android:textSize="24sp"
-                app:layout_constraintStart_toStartOf="@+id/tv_take_rent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_take_rent"
-                app:passwordToggleEnabled="true" />
+                        <TextView
+                            android:gravity="center"
+                            android:id="@+id/tv_earning_site"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="@string/earning_site"
+                            android:textAlignment="center"
+                            android:textStyle="bold"
+                            android:textColor="@android:color/black"
+                            android:textSize="18sp">
 
-            <TextView
-                android:id="@+id/tv_investor"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:background="@drawable/roundshape_white_bg"
-                android:padding="10dp"
-                android:text="@string/inverstor"
-                android:textAlignment="center"
-                android:textSize="24sp"
-                app:layout_constraintEnd_toEndOf="@+id/tv_take_rent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_take_rent" />
+                        </TextView>
 
-            <TextView
-                android:id="@+id/tv_coming_soon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:background="@drawable/roundshape_white_bg"
-                android:padding="10dp"
-                android:text="@string/comming_soon"
-                android:textAlignment="center"
-                android:textSize="24sp"
-                app:layout_constraintEnd_toEndOf="@+id/tv_investor"
-                app:layout_constraintStart_toStartOf="@+id/tv_earning_site"
-                app:layout_constraintTop_toBottomOf="@+id/tv_earning_site" />
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_hotel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    android:layout_margin="12dp"
+                    app:cardCornerRadius="12dp"
+                    app:cardElevation="6dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:padding="16dp">
+
+                        <ImageView
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:src="@drawable/home_c"/>
+
+
+                        <TextView
+                            android:gravity="center"
+                            android:id="@+id/tv_visitor"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="Visitor"
+                            android:textAlignment="center"
+                            android:textStyle="bold"
+                            android:textColor="@android:color/black"
+                            android:textSize="18sp">
+
+                        </TextView>
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_bus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    android:layout_margin="12dp"
+                    app:cardCornerRadius="12dp"
+                    app:cardElevation="6dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:padding="16dp">
+
+                        <ImageView
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:src="@drawable/home_c"/>
+
+
+                        <TextView
+                            android:gravity="center"
+                            android:id="@+id/tv_investor"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="@string/inverstor"
+                            android:textAlignment="center"
+                            android:textStyle="bold"
+                            android:textColor="@android:color/black"
+                            android:textSize="18sp">
+
+                        </TextView>
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_truck"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    android:layout_margin="12dp"
+                    app:cardCornerRadius="12dp"
+                    app:cardElevation="6dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:padding="16dp">
+
+                        <ImageView
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:src="@drawable/home_c"/>
+
+                        <TextView
+                            android:gravity="center"
+                            android:id="@+id/tv_coming_soon"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="@string/comming_soon"
+                            android:textAlignment="center"
+                            android:textSize="18sp">
+
+                        </TextView>
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+            </GridLayout>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
