before changing codes

--- a/app/src/main/res/layout/fragment_select_division.xml
+++ b/app/src/main/res/layout/fragment_select_division.xml
@@ -7,10 +7,20 @@
     android:background="@color/colorPrimary"
     tools:context=".fragments.SelectDivisionFragment">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/tolbar_division_selection"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </androidx.appcompat.widget.Toolbar>
 
     <TextView
         android:id="@+id/tv_sylhet"
-        android:layout_width="363dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:background="@drawable/roundshape_white_bg"
@@ -25,7 +35,7 @@
 
     <TextView
         android:id="@+id/tv_rangpur"
-        android:layout_width="363dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:background="@drawable/roundshape_white_bg"
@@ -39,24 +49,11 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_barishal" />
 
     <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="@string/select_location"
-        android:textColor="@color/colorWhite"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
         android:id="@+id/tv_dhaka"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/roundshape_white_bg"
         android:padding="10dp"
@@ -66,12 +63,12 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        app:layout_constraintTop_toBottomOf="@+id/tolbar_division_selection" />
 
 
     <TextView
         android:id="@+id/tv_chottogram"
-        android:layout_width="363dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:background="@drawable/roundshape_white_bg"
@@ -86,7 +83,7 @@
 
     <TextView
         android:id="@+id/tv_khulna"
-        android:layout_width="363dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:background="@drawable/roundshape_white_bg"
@@ -102,7 +99,7 @@
 
     <TextView
         android:id="@+id/tv_rajshahi"
-        android:layout_width="363dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:background="@drawable/roundshape_white_bg"
@@ -117,7 +114,7 @@
 
     <TextView
         android:id="@+id/tv_barishal"
-        android:layout_width="363dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:background="@drawable/roundshape_white_bg"
